# rag-research-qa

./: .env.example  .gitignore  ATOMIC_STEPS.md  FutureFeatures.md  README.md  TECH_SPECS.md  pyproject.toml  requirements.txt
deliverables/: RAG_QA_System_Demo.ipynb  SUBMISSION_CHECKLIST.md
scripts/: evaluate.py  index_documents.py  query_cli.py
src/: config.py
src/api/: main.py  schemas.py
src/embeddings/: __init__.py  base.py  openai_embeddings.py  opensource_embeddings.py
src/generation/: __init__.py  citation_formatter.py  context_builder.py  llm_client.py  schemas.py
src/pipeline/: __init__.py  rag_pipeline.py
src/preprocessing/: __init__.py  chunker.py  pdf_parser.py  section_detector.py
src/retrieval/: __init__.py  bm25_retriever.py  hybrid_retriever.py  reranker.py  vector_store.py
tests/: __init__.py  conftest.py  test_api.py  test_embeddings.py  test_generation.py  test_preprocessing.py  test_retrieval.py
